#Devcon-0000 feat: added method to render package info in popUp

--- a/src/components/dialog-popup/dialog-popup.scss
+++ b/src/components/dialog-popup/dialog-popup.scss
@@ -58,3 +58,9 @@
   .popover-alert .alert-content-body{
     color: darkgrey;
   }
+  .popover-alert .divider {
+    height: 1px;
+    width: 100%;
+    background-color: blue;
+
+  }
