--- a/src/components/dialog-popup/dialog-popup.html
+++ b/src/components/dialog-popup/dialog-popup.html
@@ -6,12 +6,14 @@
         </div> 
       </ion-col>
     </ion-row>
+
+    <ion-row class="divider"></ion-row>
     
     <ion-row class="alert-content-body"> 
-      <ion-item *ngFor='let item of body' no-lines>{{item}}</ion-item> 
+      <ion-item *ngFor='let item of body'>{{item}}</ion-item> 
     </ion-row>
 
     <ion-row>
-        <button ion-button full class="alert-button" (click)="close()" text-capitalize> Done </button>
+        <button ion-button full class="alert-button" (click)="close()" text-capitalize> OK. Got it. </button>
       </ion-row>
   </ion-content> 
