--- a/src/pages/qrscanner/qrscanner.scss
+++ b/src/pages/qrscanner/qrscanner.scss
@@ -1,3 +1,12 @@
 page-qrscanner {
+    .qr-scan-button {
+        margin-top: 150%;
+    }
+    .footer-button{
+        text-transform: capitalize; 
+        border-radius: 5px; 
+        height: 55px;
+        margin-right: 5px;
+    }
 
 }
