--- a/src/components/attendence/attendence.scss
+++ b/src/components/attendence/attendence.scss
@@ -1,3 +1,19 @@
 attendence {
+    .student-pic {
+        background: lightblue;
+        height: 40px;
+        width: 100%;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        span {
+            font-size: 20px;
+            color: white;
+        }
+    }
+    .pull-right {
+        float: right;
+       }
 
 }
