#Devcon-0000 feat: added style and refactored code

--- a/src/components/report-alert/report-alert.scss
+++ b/src/components/report-alert/report-alert.scss
@@ -11,13 +11,13 @@ report-alert {
       font-size: 11px;
   }
   .red-bg{
-      background-color: brown;
+      background-color: #87CEEB;
   }
   .orrange-bg{
-background-color: darkgoldenrod
+background-color: #4F94CD;
   }
   .green-bg {
-    background-color: green
+    background-color: #1874CD
   }
 
 }
