--- a/src/pages/studentview/studentview.scss
+++ b/src/pages/studentview/studentview.scss
@@ -2,6 +2,20 @@ page-studentview {
     .cl-gray {
         color: gray;
     }
+    .cl-gray-math {
+        background-color: #87CEEB;
+        color: gray;
+        margin: 0px auto !important;
+        height: 50px;
+        width: 50px
+    }
+    .cl-gray-science {
+        background-color:#1874CD;
+        color: gray;
+        margin: 0px auto !important;
+        height: 50px;
+        width: 50px
+    }
     .ft-w400 {
         font-weight: 400;
     }
