#Devcon-0000 feat: modified pages

--- a/src/components/report-alert/report-alert.html
+++ b/src/components/report-alert/report-alert.html
@@ -11,13 +11,13 @@
 
   <div #reportcanvas style="overflow: scroll;"></div>
   <div style="margin-left: 20px">
-    Attendence between 0% - 50% -- <span class="red-bg" height="5" width="5">&nbsp;&nbsp;&nbsp;&nbsp;</span>
+    {{pageName}} between 0% - 50% -- <span class="red-bg" height="5" width="5">&nbsp;&nbsp;&nbsp;&nbsp;</span>
   </div>
   <div style="margin-left: 20px">
-    Attendence between 51% - 74% -- <span class="orrange-bg" height="5" width="5">&nbsp;&nbsp;&nbsp;&nbsp;</span>
+    {{pageName}} between 51% - 74% -- <span class="orrange-bg" height="5" width="5">&nbsp;&nbsp;&nbsp;&nbsp;</span>
   </div>
   <div style="margin-left: 20px">
-    Attendence between 75% - 100% -- <span class="green-bg" height="5" width="5">&nbsp;&nbsp;&nbsp;&nbsp;</span>
+    {{pageName}} between 75% - 100% -- <span class="green-bg" height="5" width="5">&nbsp;&nbsp;&nbsp;&nbsp;</span>
   </div>
 
 </ion-content>
