--- a/src/components/send-note/send-note.html
+++ b/src/components/send-note/send-note.html
@@ -1,9 +1,15 @@
 <ion-content style="max-height: 50%">
     <ion-row class="alert-content-body"> 
+    
         <ion-textarea [(ngModel)]="notes" placeholder="Enter Note"></ion-textarea>
     </ion-row>
 
     <ion-row>
-        <button ion-button full class="alert-button" (click)="sendNotes()" text-capitalize> Send Note </button>
+        <ion-col>
+            <button ion-button full class="alert-button" (click)="sendNotes()" text-capitalize> Send Note </button>
+        </ion-col>
+        <ion-col>
+            <button ion-button full class="alert-button" (click)="closeNotes()" text-capitalize> Close </button>
+        </ion-col>
       </ion-row>
   </ion-content> 
