--- a/src/pages/perioddetails/perioddetails.scss
+++ b/src/pages/perioddetails/perioddetails.scss
@@ -1,4 +1,7 @@
 page-perioddetails {
+    ion-icon{
+        font-size: 1.6em !important;
+    }
     .col-inside {
         padding: 0;
     }
@@ -22,18 +25,34 @@ page-perioddetails {
     .pl-0 {
         padding-left: 0;
     }
+    .card-button{
+      margin-top: 5vh;
+      float: right !important;
+    }
  
     .lb-title {
-        font-weight: lighter;
+        font-weight: 420;
+        margin-top: 6px;
         font-size: 12px;
         margin-bottom: 6px;
         text-transform: uppercase;
+    }
+    .lb-title-2 {
+        font-weight: 420;
+        margin-top: 6px;
+        font-size: 12px;
+        margin-bottom: 6px;
     }
     .lb-title-new{
         font-weight: lighter;
         font-size: 11px;
         text-transform: uppercase;
         margin-top: 7px;
+    }
+    .card-image{
+        height: 100px;
+        width: 162px;
+        margin-left: 27%;
     }
  
     .lb-value {
@@ -71,6 +90,9 @@ page-perioddetails {
     }
     .wd-85 {
         width: 85%;
+    }
+    .button-ios{
+        height: 1.8em !important;
     }
     
 }
